# CannaCompass

./: .replit  cannabis_store_finder.py  cookies.txt  package-lock.json  package.json  pyproject.toml  replit.nix  start_browser_service.sh  store_finder.py  tailwind.config.ts  theme.json
attached_assets/: content-1744591057837.md  content-1744591060635.md  content-1744753071018.md  content-1744753862900.md
client/: index.html
client/src/: App.tsx  index.css
client/src/components/: BottomNavigation.tsx  CelebrationMessage.tsx  ConfettiCelebration.tsx  ErrorBoundary.tsx  Footer.tsx  Header.tsx  LoadingOverlay.tsx  LoadingSpinner.tsx  Logo.tsx  MoodCard.tsx  PrivacyConsent.tsx  ProgressBar.tsx  SearchBar.tsx  StoreCard.tsx  StrainCard.tsx  StrainReviewForm.tsx  StrainReviews.tsx  ThemeToggle.tsx  Tooltip.tsx  TutorialTooltip.tsx  WelcomeModal.tsx
client/src/contexts/: CelebrationContext.tsx  FavoritesContext.tsx  RewardsContext.tsx  ThemeContext.tsx  TutorialContext.tsx
client/src/hooks/: use-auth.tsx  use-favorites.tsx  use-window-size.tsx
client/src/lib/: accessibility.ts  api.ts  moodEffectMapping.ts  queryClient.ts
client/src/pages/: EffectsPreferences.tsx  Favorites.tsx  Home.tsx  MoodSelection.tsx  StoreFinder.tsx  StrainDetail.tsx  auth-page.tsx  (+2 more)
server/: aiRecommender.ts  anthropic.ts  auth.ts  canadianStrains.ts  databaseStorage.ts  dbSetup.ts  dispensaryData.ts  enhancedStrainData.ts  googlePlacesAdapter.ts  googlePlacesService.ts  index.ts  routes.ts  storage.ts  storageInit.ts  storeFinder.ts  strainData.ts  vectorDb.ts
shared/: schema.ts
(+1 files in other folders)
